update french bio

--- a/public/content/cv/fr.html
+++ b/public/content/cv/fr.html
@@ -1,13 +1,15 @@
 <h1>Bio</h1>
 <br>
 <br>
-<h2>Né en 1995</h2>
-<br>
 <br>
 
 
 <h3>FORMATION</h3>
-<p><strong>2019</strong> Master de théorie du Cinéma [en cours] — Université Paris 8 — France
+<p><strong>2021</strong> Doctorat en Études et Pratiques des Arts (DEPA) — thèse de
+    recherche-création intitulée <em>L’œil irradié : polyvision et dispositifs
+        cinématographiques exp(l)osés dans l’espace et le temps</em> à l’Université du Québec À
+        Montréal (UQÀM) — Canada
+<p><strong>2020</strong> Master de théorie du Cinéma — Université Paris 8 — France
 <p><strong>2019</strong> DNSEP ESBANM - École Supérieure des Beaux-Arts de Nantes
 Métropole — France
 <p><strong>2017</strong> DNAP avec félicitations du jury — EESAB - École Européenne Supérieure d’Art
@@ -18,8 +20,39 @@ Lycée la Colinière — France
 <br>
 <br>
 
+<h3>SITUATIONS PERSONNELLES</h3>
+<p><strong>2021</strong><em> Je sais que vous ne m’oublierez pas</em> (film spatialisé en collaboration avec
+    Corentin Louis) — 66 rue Rodier à Paris — France</p>
+<p><strong>2021</strong><em> Je sais que vous ne m’oublierez pas</em> (film spatialisé en collaboration avec
+    Corentin Louis) — 33 rue Saint-Éloi à Lille — France</p>
+<p><strong>2021</strong><em> Je sais que vous ne m’oublierez pas</em> (film spatialisé en collaboration avec
+    Corentin Louis) — 49A Boulevard Dalby à Nantes — France</p>
+<p><strong>2021</strong><em> Excalibur - soustraire héroïquement un objet à la terre</em> — projections
+    spatialisées dans le Cimetière Miséricorde à Nantes — France</p>
+<p><strong>2021</strong><em> Dispositif de cinéma élargi I</em> — images de synthèse avec la participation de
+    Thibault Chailleux pour le séminaire de recherche-création « Mise en espace du
+    récit » — Canada</p>
+<p><strong>2020</strong> <em> Cinéduo - Principe de descente de croix </em> (en collaboration avec Corentin Louis) — — Amphithéâtre de l’École Supérieure des Beaux-Arts de Nantes Métropole — France</p>
+<p><strong>2019</strong> <em> L’Hôtel- situation cinématographique</em> — Hôtel Residhome Les Berges de la Loire,
+Nantes — France</p>
+<p><strong>2018</strong><em> Cinématière</em> — conférence dans l’atelier du collectif OLTA, Tokyo — Japon</p>
+<p><strong>2018</strong><em> De l’idée de prose dans le cinéma français</em> — Wanted Clan Cinema, Milan — Italie</p>
+<p><strong>2018</strong><em> Peak Oil</em> — Fontaine Stravinsky, Paris — France</p>
+<p><strong>2017</strong><em> Confinement en Chambre 39</em> — Crous Saint Hélier, Rennes — France</p>
+<p><strong>2015</strong><em> Aller-Vers... </em>— TriptiC Léo Lagrange, Nantes — France</p>
+<p><strong>2015</strong><em> Aller-Vers... </em>— Centre LGBT, Nantes — France</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 <h3>SITUATIONS COLLECTIVES</h3>
+<p><strong>2021</strong> <em>Hotel lobby</em> vidéo réalisée avec Charles Wassner entre Montréal et Paris pour
+    le séminaire de recherche-création « Mise en espace du récit » — Canada, France</p>
 <p><strong>2019</strong> <em>Felicità</em> Palais des Beaux-Arts de Paris — France</p>
+<p><strong>2019</strong> <em>Go West</em> exposition collective - Galerie de l’École Supérieure des Beaux-Arts
+    de Nantes Métropole — France</p>
 <p><strong>2019</strong> <em>Devant L'archipel </em> — Bibliothèque de l’École Supérieure des Beaux-Arts de Nantes
 Métropole, Nantes — France</p>
 <p><strong>2018 </strong><em>Barrak Independants バラックアンデパンダン 生き抜くために創るのだ</em> — Centre
@@ -48,23 +81,13 @@ Verte, Nantes — France</p>
 <br>
 <br>
 
-<h3>SITUATIONS PERSONNELLES</h3>
-<p><strong>2019</strong> <em> L’Hôtel- situation cinématographique</em> — Hôtel Residhome Les Berges de la Loire,
-Nantes — France</p>
-<p><strong>2018</strong><em> Cinématière</em> — conférence dans l’atelier du collectif OLTA, Tokyo — Japon</p>
-<p><strong>2018</strong><em> De l’idée de prose dans le cinéma français</em> — Wanted Clan Cinema, Milan — Italie</p>
-<p><strong>2018</strong><em> Peak Oil</em> — Fontaine Stravinsky, Paris — France</p>
-<p><strong>2017</strong><em> Confinement en Chambre 39</em> — Crous Saint Hélier, Rennes — France</p>
-<p><strong>2015</strong><em> Aller-Vers... </em>— TriptiC Léo Lagrange, Nantes — France</p>
-<p><strong>2015</strong><em> Aller-Vers... </em>— Centre LGBT, Nantes — France</p>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
 <h3>TEXTES ET PUBLICATIONS</h3>
+<p><em> Le principe de descente de croix</em> — création littéraire en duo avec Corentin Louis,
+    2021.</p>
+<p><em> Jean-Luc Godard et le dispositif exp(l)osé : sentiments signes passions</em> — article de
+    recherche UQÀM, 2021.</p>
+<p><em> Dispositifs exp(l)osés et dispersion d’image-voix : la polyphonie intermédiale de Jean-
+    Luc Godard</em> — article de recherche UQÀM, 2021.</p>
 <p><em> Excalibur — soustraire héroïquement un objet à la terre</em> — création littéraire en collaboration avec Corentin Louis, 2019.</p>
 <p><em> Ready to be played</em> — mémoire de fin d’études, 2019.</p>
 <p><em> L’actrice sans cigarette </em> — impressions glissées dans des tubes de papier à cigarettes,
