--- a/public/content/cv/fr.html
+++ b/public/content/cv/fr.html
@@ -5,36 +5,34 @@
 
 
 <h3>FORMATION</h3>
-<p><strong>2021</strong> Doctorat en Études et Pratiques des Arts (DEPA) — thèse de
-    recherche-création intitulée <em>L’œil irradié : polyvision et dispositifs
-        cinématographiques exp(l)osés dans l’espace et le temps</em> à l’Université du Québec À
-        Montréal (UQÀM) — Canada
+<p><strong>2021</strong> Doctorat en Études et Pratiques des Arts (DEPA) — thèse de recherche-création intitulée
+    <em>L’œil irradié : polyvision et dispositifs cinématographiques exp(l)osés dans l’espace et le temps</em> à
+    l’Université du Québec À Montréal (UQÀM) — Canada</p>
 <p><strong>2020</strong> Master de théorie du Cinéma — Université Paris 8 — France
-<p><strong>2019</strong> DNSEP ESBANM - École Supérieure des Beaux-Arts de Nantes
-Métropole — France
-<p><strong>2017</strong> DNAP avec félicitations du jury — EESAB - École Européenne Supérieure d’Art
-de Bretagne - site de Rennes — France
-<p><strong>2014</strong> Baccalauréat Littéraire - Spécialité Arts Plastiques - Option Littérature Anglaise,
-Lycée la Colinière — France
+<p><strong>2019</strong> DNSEP ESBANM - École Supérieure des Beaux-Arts de Nantes</p> Métropole — France</p>
+<p><strong>2017</strong> DNAP avec félicitations du jury — EESAB - École Européenne Supérieure d’Art de Bretagne - site
+    de Rennes — France</p>
+<p><strong>2014</strong> Baccalauréat Littéraire - Spécialité Arts Plastiques - Option Littérature Anglaise, Lycée la
+    Colinière — France</p>
 <br>
 <br>
 <br>
 
 <h3>SITUATIONS PERSONNELLES</h3>
-<p><strong>2021</strong><em> Je sais que vous ne m’oublierez pas</em> (film spatialisé en collaboration avec
-    Corentin Louis) — 66 rue Rodier à Paris — France</p>
-<p><strong>2021</strong><em> Je sais que vous ne m’oublierez pas</em> (film spatialisé en collaboration avec
-    Corentin Louis) — 33 rue Saint-Éloi à Lille — France</p>
-<p><strong>2021</strong><em> Je sais que vous ne m’oublierez pas</em> (film spatialisé en collaboration avec
-    Corentin Louis) — 49A Boulevard Dalby à Nantes — France</p>
-<p><strong>2021</strong><em> Excalibur - soustraire héroïquement un objet à la terre</em> — projections
-    spatialisées dans le Cimetière Miséricorde à Nantes — France</p>
-<p><strong>2021</strong><em> Dispositif de cinéma élargi I</em> — images de synthèse avec la participation de
-    Thibault Chailleux pour le séminaire de recherche-création « Mise en espace du
-    récit » — Canada</p>
-<p><strong>2020</strong> <em> Cinéduo - Principe de descente de croix </em> (en collaboration avec Corentin Louis) — — Amphithéâtre de l’École Supérieure des Beaux-Arts de Nantes Métropole — France</p>
-<p><strong>2019</strong> <em> L’Hôtel- situation cinématographique</em> — Hôtel Residhome Les Berges de la Loire,
-Nantes — France</p>
+<p><strong>2021</strong><em> Je sais que vous ne m’oublierez pas</em> (film spatialisé en collaboration avec Corentin
+    Louis) — 66 rue Rodier à Paris — France</p>
+<p><strong>2021</strong><em> Je sais que vous ne m’oublierez pas</em> (film spatialisé en collaboration avec Corentin
+    Louis) — 33 rue Saint-Éloi à Lille — France</p>
+<p><strong>2021</strong><em> Je sais que vous ne m’oublierez pas</em> (film spatialisé en collaboration avec Corentin
+    Louis) — 49A Boulevard Dalby à Nantes — France</p>
+<p><strong>2021</strong><em> Excalibur - soustraire héroïquement un objet à la terre</em> — projections spatialisées
+    dans le Cimetière Miséricorde à Nantes — France</p>
+<p><strong>2021</strong><em> Dispositif de cinéma élargi I</em> — images de synthèse avec la participation de Thibault
+    Chailleux pour le séminaire de recherche-création « Mise en espace du récit » — Canada</p>
+<p><strong>2020</strong> <em> Cinéduo - Principe de descente de croix </em> (en collaboration avec Corentin Louis) —
+    Amphithéâtre de l’École Supérieure des Beaux-Arts de Nantes Métropole — France</p>
+<p><strong>2019</strong> <em> L’Hôtel- situation cinématographique</em> — Hôtel Residhome Les Berges de la Loire, Nantes
+    — France</p>
 <p><strong>2018</strong><em> Cinématière</em> — conférence dans l’atelier du collectif OLTA, Tokyo — Japon</p>
 <p><strong>2018</strong><em> De l’idée de prose dans le cinéma français</em> — Wanted Clan Cinema, Milan — Italie</p>
 <p><strong>2018</strong><em> Peak Oil</em> — Fontaine Stravinsky, Paris — France</p>
@@ -54,26 +52,25 @@ Nantes — France</p>
 <p><strong>2019</strong> <em>Go West</em> exposition collective - Galerie de l’École Supérieure des Beaux-Arts
     de Nantes Métropole — France</p>
 <p><strong>2019</strong> <em>Devant L'archipel </em> — Bibliothèque de l’École Supérieure des Beaux-Arts de Nantes
-Métropole, Nantes — France</p>
-<p><strong>2018 </strong><em>Barrak Independants バラックアンデパンダン 生き抜くために創るのだ</em> — Centre
-d’art Barrak, Okinawa — Japon</p>
+    Métropole, Nantes — France</p>
+<p><strong>2018 </strong><em>Barrak Independants バラックアンデパンダン 生き抜くために創るのだ</em> — Centre d’art Barrak, Okinawa — Japon</p>
 <p><strong>2018 </strong> <em> De la zone humide où naissent les images</em> — Galerie de l’École Supérieure des
-Beaux-Arts de Nantes Métropole, Nantes — France</p>
-<p><strong>2018</strong> <em>Shisha no Sho 死者の書 The Book of the Dead</em> — avec le collectif OLTA, Mont
-Futakami, Nara — Japon</p>
-<p><strong>2018</strong> <em>In the middle of somewhere</em> — Pavillon français du Suncheon National
-Garden 순천만국가정원 — Corée du Sud</p>
-<p><strong>2018</strong><em> First Time</em> — Pavillon français du Suncheon National Garden 순천만국가정원 —
-Corée du Sud</p>
+    Beaux-Arts de Nantes Métropole, Nantes — France</p>
+<p><strong>2018</strong> <em>Shisha no Sho 死者の書 The Book of the Dead</em> — avec le collectif OLTA, Mont Futakami, Nara
+    — Japon</p>
+<p><strong>2018</strong> <em>In the middle of somewhere</em> — Pavillon français du Suncheon National Garden 순천만국가정원 —
+    Corée du Sud</p>
+<p><strong>2018</strong><em> First Time</em> — Pavillon français du Suncheon National Garden 순천만국가정원 — Corée du Sud</p>
 <p><strong>2018</strong> <em>Workshop Cinématière #2 Êtres invisibles</em> — le Lieu Unique, Nantes — France</p>
 <p><strong>2017</strong><em> Workshop Cinématière #1 Utopie/Dystopie</em> — le Lieu Unique, Nantes — France</p>
-<p><strong>2017</strong> <em>BOAT</em> — Galerie du cloître de l’École Européenne Supérieure d’Art de Bretagne,
-Rennes — France</p>
-<p><strong>2016</strong><em> Thabor avec vues</em> — Galerie de l’Orangerie et bassins du parc Thabor, Rennes —
-France</p>
-<p><strong>2016</strong> <em>Work in process : Dancers sleeping inside a building</em> — Galerie du cloître de l’École Européenne Supérieure d’Art de Bretagne, Rennes — France</p>
+<p><strong>2017</strong> <em>BOAT</em> — Galerie du cloître de l’École Européenne Supérieure d’Art de Bretagne, Rennes —
+    France</p>
+<p><strong>2016</strong><em> Thabor avec vues</em> — Galerie de l’Orangerie et bassins du parc Thabor, Rennes — France
+</p>
+<p><strong>2016</strong> <em>Work in process : Dancers sleeping inside a building</em> — Galerie du cloître de l’École
+    Européenne Supérieure d’Art de Bretagne, Rennes — France</p>
 <p><strong>2013</strong><em> Les Échos vers l’Est</em> — TriptiC Léo Lagrange, dans le cadre de Nantes Capitale
-Verte, Nantes — France</p>
+    Verte, Nantes — France</p>
 <p><strong>2012</strong><em> Raconte-moi, raconte-toi</em>— Médiathèque de Châteaubriand — France</p>
 <br>
 <br>
@@ -87,21 +84,35 @@ Verte, Nantes — France</p>
 <p><em> Jean-Luc Godard et le dispositif exp(l)osé : sentiments signes passions</em> — article de
     recherche UQÀM, 2021.</p>
 <p><em> Dispositifs exp(l)osés et dispersion d’image-voix : la polyphonie intermédiale de Jean-
-    Luc Godard</em> — article de recherche UQÀM, 2021.</p>
-<p><em> Excalibur — soustraire héroïquement un objet à la terre</em> — création littéraire en collaboration avec Corentin Louis, 2019.</p>
+        Luc Godard</em> — article de recherche UQÀM, 2021.</p>
+<p><em> Excalibur — soustraire héroïquement un objet à la terre</em> — création littéraire en collaboration avec
+    Corentin Louis, 2019.</p>
 <p><em> Ready to be played</em> — mémoire de fin d’études, 2019.</p>
 <p><em> L’actrice sans cigarette </em> — impressions glissées dans des tubes de papier à cigarettes,
-2019.</p>
+    2019.</p>
 <p><em> Survivances</em> — compilation d’affiches de films disparus, 2018.</p>
-<p><em> Réalités 00 </em> — édition photographique collective, sous la direction de Patrick Faigenbaum et Yves Trémorin, 2017.</p>
-<p><em> Cinématière</em>  — dossier d’exposition fictive, 2017.</p>
+<p><em> Réalités 00 </em> — édition photographique collective, sous la direction de Patrick Faigenbaum et Yves Trémorin,
+    2017.</p>
+<p><em> Cinématière</em> — dossier d’exposition fictive, 2017.</p>
 <p><em> Projections physiques </em> — édition lithographique, 2017.</p>
-<p><em> Gloses</em>  — édition collective, sous la direction de Laurence Lépron, 2017.</p>
-<p><em> 2088 : Réveil au milieu de l’autre mobilier</em>  — pièce en une scène, 2016.</p>
-<p><em> Maisons</em>  — dessins sur feuilles reliées, 2015.</p>
+<p><em> Gloses</em> — édition collective, sous la direction de Laurence Lépron, 2017.</p>
+<p><em> 2088 : Réveil au milieu de l’autre mobilier</em> — pièce en une scène, 2016.</p>
+<p><em> Maisons</em> — dessins sur feuilles reliées, 2015.</p>
 <br>
 <br>
 <br>
 
+<h3>STAGES</h3>
+<p><strong>2018</strong> JOLTA, collectif d’artistes — collaboration artistique et assistanat — Tokyo,
+    Japon.</p>
+<p><strong>2020</strong> Charles Fréger, artiste photographe — assistanat — Rouen, France.</p>
+<p><strong>2019</strong> Natacha Lesueur, artiste photographe — assistanat — Rennes, France.</p>
 
-<a href="/content/cv/assets/mu_blake_cv.pdf" class="button"> Download cv </a> 
+<h3>ENTRETIENS</h3> (menés avec)
+<p><strong>2020</strong> Jacques Perconte</p>
+<p><strong>2020</strong> Noël Herpe</p>
+<p><strong>2019</strong> Antoine de Baecque</p>
+<p><strong>2019</strong> Éric Rondepierre</p>
+
+
+<a href="/content/cv/assets/mu_blake_cv.pdf" class="button"> Download cv </a>
