--- a/public/content/cv/fr.html
+++ b/public/content/cv/fr.html
@@ -9,7 +9,7 @@
     <em>L’œil irradié : polyvision et dispositifs cinématographiques exp(l)osés dans l’espace et le temps</em> à
     l’Université du Québec À Montréal (UQÀM) — Canada</p>
 <p><strong>2020</strong> Master de théorie du Cinéma — Université Paris 8 — France
-<p><strong>2019</strong> DNSEP ESBANM - École Supérieure des Beaux-Arts de Nantes</p> Métropole — France</p>
+<p><strong>2019</strong> DNSEP ESBANM - École Supérieure des Beaux-Arts de Nantes Métropole — France</p>
 <p><strong>2017</strong> DNAP avec félicitations du jury — EESAB - École Européenne Supérieure d’Art de Bretagne - site
     de Rennes — France</p>
 <p><strong>2014</strong> Baccalauréat Littéraire - Spécialité Arts Plastiques - Option Littérature Anglaise, Lycée la
@@ -35,10 +35,9 @@
     — France</p>
 <p><strong>2018</strong><em> Cinématière</em> — conférence dans l’atelier du collectif OLTA, Tokyo — Japon</p>
 <p><strong>2018</strong><em> De l’idée de prose dans le cinéma français</em> — Wanted Clan Cinema, Milan — Italie</p>
-<p><strong>2018</strong><em> Peak Oil</em> — Fontaine Stravinsky, Paris — France</p>
 <p><strong>2017</strong><em> Confinement en Chambre 39</em> — Crous Saint Hélier, Rennes — France</p>
 <p><strong>2015</strong><em> Aller-Vers... </em>— TriptiC Léo Lagrange, Nantes — France</p>
-<p><strong>2015</strong><em> Aller-Vers... </em>— Centre LGBT, Nantes — France</p>
+<p><strong>2015</strong><em> Aller-Vers... </em>— Centre LGBTQ+, Nantes — France</p>
 <br>
 <br>
 <br>
@@ -71,7 +70,7 @@
     Européenne Supérieure d’Art de Bretagne, Rennes — France</p>
 <p><strong>2013</strong><em> Les Échos vers l’Est</em> — TriptiC Léo Lagrange, dans le cadre de Nantes Capitale
     Verte, Nantes — France</p>
-<p><strong>2012</strong><em> Raconte-moi, raconte-toi</em>— Médiathèque de Châteaubriand — France</p>
+<p><strong>2012</strong><em> Raconte-moi, raconte-toi</em> — Médiathèque de Châteaubriand — France</p>
 <br>
 <br>
 <br>
@@ -97,22 +96,27 @@
 <p><em> Projections physiques </em> — édition lithographique, 2017.</p>
 <p><em> Gloses</em> — édition collective, sous la direction de Laurence Lépron, 2017.</p>
 <p><em> 2088 : Réveil au milieu de l’autre mobilier</em> — pièce en une scène, 2016.</p>
-<p><em> Maisons</em> — dessins sur feuilles reliées, 2015.</p>
 <br>
 <br>
 <br>
 
 <h3>STAGES</h3>
-<p><strong>2018</strong> JOLTA, collectif d’artistes — collaboration artistique et assistanat — Tokyo,
+<p><strong>2018</strong> OLTA, collectif d’artistes — collaboration artistique et assistanat — Tokyo,
     Japon.</p>
-<p><strong>2020</strong> Charles Fréger, artiste photographe — assistanat — Rouen, France.</p>
-<p><strong>2019</strong> Natacha Lesueur, artiste photographe — assistanat — Rennes, France.</p>
+<p><strong>2016</strong> Charles Fréger, artiste photographe — assistanat — Rouen, France.</p>
+<p><strong>2015</strong> Natacha Lesueur, artiste photographe — assistanat — Rennes, France.</p>
+<br>
+<br>
+<br>
 
-<h3>ENTRETIENS</h3> (menés avec)
+<h3>ENTRETIENS (menés avec)</h3> 
 <p><strong>2020</strong> Jacques Perconte</p>
 <p><strong>2020</strong> Noël Herpe</p>
 <p><strong>2019</strong> Antoine de Baecque</p>
 <p><strong>2019</strong> Éric Rondepierre</p>
+<br>
+<br>
+<br>
 
 
 <a href="/content/cv/assets/mu_blake_cv.pdf" class="button"> Download cv </a>
