--- a/public/content/cv/en.html
+++ b/public/content/cv/en.html
@@ -4,23 +4,53 @@
 <br>
 
 
-
-
 <h3>EDUCATION</h3>
-<p><strong>2019</strong> Master of Cinema Theory [ongoing] — University Paris 8 - France
-<p><strong>2019</strong> Master degree (DNSEP) with first-class honors — ESBANM - Nantes School of Fine Arts - France
-<p><strong>2019</strong> Master degree (DNSEP) [ongoing] ESBANM - Nantes School of Fine-Arts - France
-<p><strong>2017</strong> Undergraduate degree (DNAP) with first-class honors — EESAB - European School of Art of Bretagne - Rennes - France
-<p><strong>2014</strong> Literary Baccalaureate - Art specialty - English Literature option - La Colinière High School - France
+<p><strong>2021</strong> [ongoing] Doctorat en Études et Pratiques des Arts (DEPA) — thèse de
+    recherche-création intitulée <em>L’œil irradié : polyvision et dispositifs
+    cinématographiques exp(l)osés dans l’espace et le temps</em> à l’Université du Québec À
+    Montréal (UQÀM) — Canada</p>
+<p><strong>2020</strong> Master degree in cinema theory – screen studies — Université Paris 8 — France</p>
+<p><strong>2019</strong> Master degree (DNSEP) with first-class honors — ESBANM - Nantes School of Fine Arts - France</p>
+<p><strong>2017</strong> Undergraduate degree (DNAP) with first-class honors — EESAB - European School of Art of Bretagne - Rennes - France</p>
+<p><strong>2014</strong> Literary Baccalaureate - Art specialty - English Literature option - La Colinière High School - France</p>
 <br>
 <br>
 <br>
 <br>
 <br>
     
+<h3>SOLO EVENTS</h3>
+<p><strong>2021</strong><em> I know you won’t forget me</em> (spatialized movie in collaboration with Corentin
+Louis) — 66 rue Rodier à Paris — France</p>
+<p><strong>2021</strong><em> I know you won’t forget me</em> (spatialized movie in collaboration with Corentin
+Louis) — 33 rue Saint-Éloi à Lille — France</p>
+<p><strong>2021</strong><em> I know you won’t forget me</em> (spatialized movie in collaboration with Corentin
+Louis) — 49A Boulevard Dalby à Nantes — France</p>
+<p><strong>2021</strong><em> Excalibur - heroically substracting an object from the ground</em> — spatialized
+    projections in the Mercy Cemetery of Nantes — France</p>
+<p><strong>2021</strong><em> Expanded cinema display I</em> — computer-generated images with the
+    participation of Thibault Chailleux for the research-creation seminar "Spacing the
+    narrative" — Canada, France</p>
+<p><strong>2020</strong> <em> Cinéduo - the principle of the descent from the cross</em> (in collaboration with Corentin Louis) —
+    Amphitheater of the Nantes Fine Arts School — France</p>
+<p><strong>2019</strong> <em> The hotel – cinematographic situation</em> — Residhome Hotel, Nantes - France </p>
+<p><strong>2018</strong><em> Cinematter</em> — conference in OLTA's art collective's studio, Tokyo - Japan</p>
+<p><strong>2018</strong><em> The idea of prose in the french cinema</em> — Wanted Clan Cinema, Milan - Italy</p>
+<p><strong>2017</strong><em> Confinement in Room 39</em> — Saint Hélier, Rennes - France</p>
+<p><strong>2015</strong><em> Move towards... </em>— LGBTQ+ Center, Nantes - France</p>
+<p><strong>2015</strong><em> Move towards... </em>— TriptiC Léo Lagrange, Nantes - France</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 <h3>GROUP EVENTS</h3>
-<p><strong>2019</strong> <em>Felicità</em> Palace of the Fine Arts of Paris — France</p>
-<p><strong>2019</strong> <em>In front of the archipelago </em> — Library of the Nantes School of Fine Arts, Nantes - France </p>
+<p><strong>2021</strong> <em>Hotel lobby</em> video produced with Charles Wassner between Montreal and
+    Paris for the research-creation seminar "Spacing the narrative" — Canada, France</p>
+<p><strong>2019</strong> <em>Felicità</em> collective exhibition of first-class honors - Palace of the Fine Arts of Paris — France</p>
+<p><strong>2019</strong> <em>Go West</em> collective exhibition - Nantes Fine Arts School gallery — France</p>
+<p><strong>2019</strong> <em>In front of the archipelago </em> — Nantes Fine Arts School Library — France </p>
 <p><strong>2018 </strong><em>Barrak Independants バラックアンデパンダン 生き抜くために創るのだ</em> — Barrak Art Center, Okinawa - Japan</p>
 <p><strong>2018 </strong> <em> From the wetland where the images were born</em> — Nantes Fine Arts School gallery, Nantes - France </p>
 <p><strong>2018</strong> <em>Shisha no Sho 死者の書 The Book of the Dead</em> — with the art collective OLTA, Mount Futakami, Nara - Japan </p>
@@ -39,21 +69,10 @@
 <br>
 <br>
 
-<h3>SOLO EVENTS</h3>
-<p><strong>2019</strong> <em> Les Berges de la Loire Hotel - cinematographic situation</em> — Residhome Hotel, Nantes - France </p>
-<p><strong>2018</strong><em> Cinematter</em> — conference in OLTA's art collective's studio, Tokyo - Japan</p>
-<p><strong>2018</strong><em> The idea of prose in the french cinema</em> — Wanted Clan Cinema, Milan - Italy</p>
-<p><strong>2018</strong><em> Peak Oil</em> — Stravinsky fountain, Paris - France</p>
-<p><strong>2017</strong><em> Confinement in Room 39</em> — Saint Hélier, Rennes - France</p>
-<p><strong>2015</strong><em> Move towards... </em>— LGBT Center, Nantes - France</p>
-<p><strong>2015</strong><em> Move towards... </em>— TriptiC Léo Lagrange, Nantes - France</p>
-<br>
-<br>
-<br>
-<br>
-<br>
-
 <h3>TEXTS AND PUBLICATIONS</h3>
+<p><em> The principle of the descent from the cross</em> — poetry creation in collaboration with Corentin Louis, 2021.</p>
+<p><em> Jean-Luc Godard and the exploded display : feelings signs passions</em> — research article UQÀM, 2021.</p>
+<p><em> Exploded diplays and voice-image dispersion : the intermedial polyphony of Jean-Luc Godard</em> — research article UQÀM, 2021.</p>
 <p><em> Excalibur — heroically subtracting an object from the ground</em> — literary creation in collaboration with Corentin Louis, 2019.</p>
 <p><em> Ready to be played</em>  — graduation thesis, 2019.</p>
 <p><em> The actress without a cigarette </em> — printings slipped into cigarette paper tubes, 2019.</p>
@@ -63,7 +82,24 @@
 <p><em> Physical projections </em> — lithographic edition, 2017..</p>
 <p><em> Gloses</em>  — collective edition, under the direction of Laurence Lépron, 2017.</p>
 <p><em> 2088 : Wake up in the middle of another furniture</em>  — a play in one scene, 2016.</p>
-<p><em> Houses</em>  — drawings edition, 2015.</p>
+<br>
+<br>
+<br>
+
+<h3>INTERNSHIPS</h3>
+<p><strong>2018</strong> OLTA art collective — artistic collaboration and assistantship — Tokyo,
+    Japon.</p>
+<p><strong>2016</strong> Charles Fréger, photographer artist — assistantship — Rouen, France.</p>
+<p><strong>2015</strong> Natacha Lesueur, photographer artist — assistantship — Rennes, France.</p>
+<br>
+<br>
+<br>
+
+<h3>INTERVIEWS (conducted with)</h3> 
+<p><strong>2020</strong> Jacques Perconte</p>
+<p><strong>2020</strong> Noël Herpe</p>
+<p><strong>2019</strong> Antoine de Baecque</p>
+<p><strong>2019</strong> Éric Rondepierre</p>
 <br>
 <br>
 <br>
