--- a/public/content/cv/en.html
+++ b/public/content/cv/en.html
@@ -5,13 +5,13 @@
 
 
 <h3>EDUCATION</h3>
-<p><strong>2021</strong> [ongoing] Doctorat en Études et Pratiques des Arts (DEPA) — thèse de
-    recherche-création intitulée <em>L’œil irradié : polyvision et dispositifs
-    cinématographiques exp(l)osés dans l’espace et le temps</em> à l’Université du Québec À
+<p><strong>2021 [ongoing]</strong> [ongoing] PhD student in Art Studies and Practices (DEPA) — research-creation
+    thesis untitled <em>The irradiated eye : polyvision and cinematographic displays exploded
+        in space and time</em> at Université du Québec À Montréal (UQÀM) — Canada
     Montréal (UQÀM) — Canada</p>
 <p><strong>2020</strong> Master degree in cinema theory – screen studies — Université Paris 8 — France</p>
 <p><strong>2019</strong> Master degree (DNSEP) with first-class honors — ESBANM - Nantes School of Fine Arts - France</p>
-<p><strong>2017</strong> Undergraduate degree (DNAP) with first-class honors — EESAB - European School of Art of Bretagne - Rennes - France</p>
+<p><strong>2017</strong> Undergraduate degree (DNAP) with first-class honors — EESAB - European School of Art of Brittany - France</p>
 <p><strong>2014</strong> Literary Baccalaureate - Art specialty - English Literature option - La Colinière High School - France</p>
 <br>
 <br>
@@ -33,7 +33,8 @@ Louis) — 49A Boulevard Dalby à Nantes — France</p>
     narrative" — Canada, France</p>
 <p><strong>2020</strong> <em> Cinéduo - the principle of the descent from the cross</em> (in collaboration with Corentin Louis) —
     Amphitheater of the Nantes Fine Arts School — France</p>
-<p><strong>2019</strong> <em> The hotel – cinematographic situation</em> — Residhome Hotel, Nantes - France </p>
+<p><strong>2019</strong> <em> The hotel – cinematographic situation</em> — Residhome Hotel Les Berges de la
+    Loire Nantes - France </p>
 <p><strong>2018</strong><em> Cinematter</em> — conference in OLTA's art collective's studio, Tokyo - Japan</p>
 <p><strong>2018</strong><em> The idea of prose in the french cinema</em> — Wanted Clan Cinema, Milan - Italy</p>
 <p><strong>2017</strong><em> Confinement in Room 39</em> — Saint Hélier, Rennes - France</p>
