--- a/public/content/cv/fr.html
+++ b/public/content/cv/fr.html
@@ -5,15 +5,16 @@
 
 
 <h3>FORMATION</h3>
-<p><strong>2021</strong> Doctorat en Études et Pratiques des Arts (DEPA) — thèse de recherche-création intitulée
+<p><strong>2021 [en cours]</strong> Doctorat en Études et Pratiques des Arts (DEPA) — thèse de recherche-création intitulée
     <em>L’œil irradié : polyvision et dispositifs cinématographiques exp(l)osés dans l’espace et le temps</em> à
     l’Université du Québec À Montréal (UQÀM) — Canada</p>
-<p><strong>2020</strong> Master de théorie du Cinéma — Université Paris 8 — France
-<p><strong>2019</strong> DNSEP ESBANM - École Supérieure des Beaux-Arts de Nantes Métropole — France</p>
-<p><strong>2017</strong> DNAP avec félicitations du jury — EESAB - École Européenne Supérieure d’Art de Bretagne - site
-    de Rennes — France</p>
-<p><strong>2014</strong> Baccalauréat Littéraire - Spécialité Arts Plastiques - Option Littérature Anglaise, Lycée la
-    Colinière — France</p>
+<p><strong>2020</strong> Master de théorie et esthétique du Cinéma — Université Paris 8 — France
+<p><strong>2019</strong> DNSEP (master) avec félicitations du jury — ESBANM - École Supérieure des
+    Beaux-Arts de Nantes Métropole — France</p>
+<p><strong>2017</strong> DNAP (licence) avec félicitations du jury — EESAB - École Européenne
+    Supérieure d’Art de Bretagne - site de Rennes — France</p>
+<p><strong>2014</strong> Baccalauréat Littéraire — Spécialité Arts Plastiques - Option Littérature
+    Anglaise, La Colinière, Nantes — France</p>
 <br>
 <br>
 <br>
@@ -35,9 +36,9 @@
     — France</p>
 <p><strong>2018</strong><em> Cinématière</em> — conférence dans l’atelier du collectif OLTA, Tokyo — Japon</p>
 <p><strong>2018</strong><em> De l’idée de prose dans le cinéma français</em> — Wanted Clan Cinema, Milan — Italie</p>
-<p><strong>2017</strong><em> Confinement en Chambre 39</em> — Crous Saint Hélier, Rennes — France</p>
-<p><strong>2015</strong><em> Aller-Vers... </em>— TriptiC Léo Lagrange, Nantes — France</p>
+<p><strong>2017</strong><em> Confinement en Chambre 39</em> — Saint Hélier, Rennes — France</p>
 <p><strong>2015</strong><em> Aller-Vers... </em>— Centre LGBTQ+, Nantes — France</p>
+<p><strong>2015</strong><em> Aller-Vers... </em>— TriptiC Léo Lagrange, Nantes — France</p>
 <br>
 <br>
 <br>
@@ -45,23 +46,22 @@
 <br>
 
 <h3>SITUATIONS COLLECTIVES</h3>
-<p><strong>2021</strong> <em>Hotel lobby</em> vidéo réalisée avec Charles Wassner entre Montréal et Paris pour
+<p><strong>2021</strong> <em>Hotel lobby</em> - vidéo réalisée avec Charles Wassner entre Montréal et Paris pour
     le séminaire de recherche-création « Mise en espace du récit » — Canada, France</p>
-<p><strong>2019</strong> <em>Felicità</em> Palais des Beaux-Arts de Paris — France</p>
-<p><strong>2019</strong> <em>Go West</em> exposition collective - Galerie de l’École Supérieure des Beaux-Arts
+<p><strong>2019</strong> <em>Felicità</em> - Palais des Beaux-Arts de Paris — France</p>
+<p><strong>2019</strong> <em>Go West</em> - exposition collective - Galerie de l’École Supérieure des Beaux-Arts
     de Nantes Métropole — France</p>
-<p><strong>2019</strong> <em>Devant L'archipel </em> — Bibliothèque de l’École Supérieure des Beaux-Arts de Nantes
-    Métropole, Nantes — France</p>
-<p><strong>2018 </strong><em>Barrak Independants バラックアンデパンダン 生き抜くために創るのだ</em> — Centre d’art Barrak, Okinawa — Japon</p>
+<p><strong>2019</strong> <em>Devant L'archipel </em> — Bibliothèque de l’École Supérieure des Beaux-Arts de Nantes — France</p>
+<p><strong>2018 </strong><em> Barrak Independants バラックアンデパンダン 生き抜くために創るのだ</em> — Centre d’art Barrak, Okinawa — Japon</p>
 <p><strong>2018 </strong> <em> De la zone humide où naissent les images</em> — Galerie de l’École Supérieure des
-    Beaux-Arts de Nantes Métropole, Nantes — France</p>
+    Beaux-Arts de Nantes — France</p>
 <p><strong>2018</strong> <em>Shisha no Sho 死者の書 The Book of the Dead</em> — avec le collectif OLTA, Mont Futakami, Nara
     — Japon</p>
 <p><strong>2018</strong> <em>In the middle of somewhere</em> — Pavillon français du Suncheon National Garden 순천만국가정원 —
     Corée du Sud</p>
 <p><strong>2018</strong><em> First Time</em> — Pavillon français du Suncheon National Garden 순천만국가정원 — Corée du Sud</p>
-<p><strong>2018</strong> <em>Workshop Cinématière #2 Êtres invisibles</em> — le Lieu Unique, Nantes — France</p>
-<p><strong>2017</strong><em> Workshop Cinématière #1 Utopie/Dystopie</em> — le Lieu Unique, Nantes — France</p>
+<p><strong>2018</strong> <em>Réalités #00</em> — Galerie du cloître de l’École Européenne Supérieure d’Art de
+    Bretagne, Rennes — France</p>
 <p><strong>2017</strong> <em>BOAT</em> — Galerie du cloître de l’École Européenne Supérieure d’Art de Bretagne, Rennes —
     France</p>
 <p><strong>2016</strong><em> Thabor avec vues</em> — Galerie de l’Orangerie et bassins du parc Thabor, Rennes — France
