--- a/public/content/cv/en.html
+++ b/public/content/cv/en.html
@@ -2,7 +2,8 @@
 <br>
 <br>
 <br>
-
+<br>
+<br>
 
 <h3>EDUCATION</h3>
 <p><strong>2021 [ongoing]</strong> [ongoing] PhD student in Art Studies and Practices (DEPA) — research-creation
@@ -12,7 +13,7 @@
 <p><strong>2020</strong> Master degree in cinema theory – screen studies — Université Paris 8 — France</p>
 <p><strong>2019</strong> Master degree (DNSEP) with first-class honors — ESBANM - Nantes School of Fine Arts - France</p>
 <p><strong>2017</strong> Undergraduate degree (DNAP) with first-class honors — EESAB - European School of Art of Brittany - France</p>
-<p><strong>2014</strong> Literary Baccalaureate - Art specialty - English Literature option - La Colinière High School - France</p>
+<p><strong>2014</strong> Literary Baccalaureate — Art specialty - English Literature option - La Colinière High School - France</p>
 <br>
 <br>
 <br>
@@ -47,22 +48,21 @@ Louis) — 49A Boulevard Dalby à Nantes — France</p>
 <br>
 
 <h3>GROUP EVENTS</h3>
-<p><strong>2021</strong> <em>Hotel lobby</em> video produced with Charles Wassner between Montreal and
+<p><strong>2021</strong> <em>Hotel lobby</em> — video produced with Charles Wassner between Montreal and
     Paris for the research-creation seminar "Spacing the narrative" — Canada, France</p>
-<p><strong>2019</strong> <em>Felicità</em> collective exhibition of first-class honors - Palace of the Fine Arts of Paris — France</p>
-<p><strong>2019</strong> <em>Go West</em> collective exhibition - Nantes Fine Arts School gallery — France</p>
+<p><strong>2019</strong> <em>Felicità</em> — collective exhibition of first-class honors - Palace of the Fine Arts of Paris — France</p>
+<p><strong>2019</strong> <em>Go West</em> — collective exhibition — Nantes Fine Arts School gallery — France</p>
 <p><strong>2019</strong> <em>In front of the archipelago </em> — Nantes Fine Arts School Library — France </p>
 <p><strong>2018 </strong><em>Barrak Independants バラックアンデパンダン 生き抜くために創るのだ</em> — Barrak Art Center, Okinawa - Japan</p>
 <p><strong>2018 </strong> <em> From the wetland where the images were born</em> — Nantes Fine Arts School gallery, Nantes - France </p>
 <p><strong>2018</strong> <em>Shisha no Sho 死者の書 The Book of the Dead</em> — with the art collective OLTA, Mount Futakami, Nara - Japan </p>
 <p><strong>2018</strong> <em>In the middle of somewhere</em> — French pavilion of the Suncheon National Garden 순천 만 국가 정원 - South Korea </p>
 <p><strong>2018</strong><em> First Time</em> — French pavilion of the Suncheon National Garden 순천 만 국가 정원 - South Korea </p>
-<p><strong>2018</strong> <em>Cinematter workshop #2 Invisible beings</em> — le Lieu Unique, Nantes — France</p>
-<p><strong>2017</strong><em> Cinematter workshop #1 Utopia / Dystopia</em> — le Lieu Unique, Nantes - France</p>
+<p><strong>2017</strong> <em>Réalités #00</em> — Cloister gallery of the European School of Art of Brittany —France</p>
 <p><strong>2017</strong> <em>BOAT</em> — Cloister Gallery of the European School of Art of Bretagne, Rennes - France </p>
 <p><strong>2016</strong><em> Thabor with views</em> — Gallery of the Orangery and Thabor Park basins, Rennes - France </p>
-<p><strong>2016</strong> <em>Work in process : Dancers sleeping inside a building</em> — Galerie du cloître de l’École Européenne Supérieure d’Art de Bretagne, Rennes — France</p>
-<p><strong>2013</strong><em> Echoes of the East</em> — TriptiC Léo Lagrange, as part of Nantes Green Capital,Nantes - France </p>
+<p><strong>2016</strong> <em>Work in process : Dancers sleeping inside a building</em> — Cloister gallery of the European School of Art of Brittany — France</p>
+<p><strong>2013</strong><em> Echoes of the East</em> — TriptiC Léo Lagrange, as part of Nantes Green Capital - France </p>
 <p><strong>2012</strong><em> Tell me, tell yourself</em>— Châteaubriand Library - France</p>
 <br>
 <br>
@@ -86,6 +86,8 @@ Louis) — 49A Boulevard Dalby à Nantes — France</p>
 <br>
 <br>
 <br>
+<br>
+<br>
 
 <h3>INTERNSHIPS</h3>
 <p><strong>2018</strong> OLTA art collective — artistic collaboration and assistantship — Tokyo,
@@ -95,12 +97,16 @@ Louis) — 49A Boulevard Dalby à Nantes — France</p>
 <br>
 <br>
 <br>
+<br>
+<br>
 
 <h3>INTERVIEWS (conducted with)</h3> 
 <p><strong>2020</strong> Jacques Perconte</p>
 <p><strong>2020</strong> Noël Herpe</p>
 <p><strong>2019</strong> Antoine de Baecque</p>
 <p><strong>2019</strong> Éric Rondepierre</p>
+<br>
+<br>
 <br>
 <br>
 <br>
