--- a/public/content/cv/en.html
+++ b/public/content/cv/en.html
@@ -111,4 +111,4 @@ Louis) — 49A Boulevard Dalby à Nantes — France</p>
 <br>
 <br>
 
-<a href="/content/cv/assets/mu_blake_cv.pdf" class="button"> Download cv </a> 
+<a href="/content/cv/assets/mu_blake_cv.pdf" class="button"> Download CV </a> 
