--- a/public/content/cv/fr.html
+++ b/public/content/cv/fr.html
@@ -127,4 +127,4 @@
 <br>
 
 
-<a href="/content/cv/assets/mu_blake_cv.pdf" class="button"> Download cv </a>
+<a href="/content/cv/assets/mu_blake_cv.pdf" class="button"> Télécharger le CV </a>
