--- a/public/content/cv/en.html
+++ b/public/content/cv/en.html
@@ -7,35 +7,39 @@
 
 <h3>EDUCATION</h3>
 <p><strong>2021 [ongoing]</strong> [ongoing] PhD student in Art Studies and Practices (DEPA) — research-creation
-    thesis untitled <em>The irradiated eye : polyvision and cinematographic displays exploded
-        in space and time</em> at Université du Québec À Montréal (UQÀM) — Canada
-    Montréal (UQÀM) — Canada</p>
+	thesis untitled <em>The irradiated eye : polyvision and cinematographic displays exploded
+		in space and time</em> at Université du Québec À Montréal (UQÀM) — Canada
+	Montréal (UQÀM) — Canada</p>
 <p><strong>2020</strong> Master degree in cinema theory – screen studies — Université Paris 8 — France</p>
-<p><strong>2019</strong> Master degree (DNSEP) with first-class honors — ESBANM - Nantes School of Fine Arts - France</p>
-<p><strong>2017</strong> Undergraduate degree (DNAP) with first-class honors — EESAB - European School of Art of Brittany - France</p>
-<p><strong>2014</strong> Literary Baccalaureate — Art specialty - English Literature option - La Colinière High School - France</p>
+<p><strong>2019</strong> Master degree (DNSEP) with first-class honors — ESBANM - Nantes School of Fine Arts - France
+</p>
+<p><strong>2017</strong> Undergraduate degree (DNAP) with first-class honors — EESAB - European School of Art of
+	Brittany - France</p>
+<p><strong>2014</strong> Literary Baccalaureate — Art specialty - English Literature option - La Colinière High School -
+	France</p>
 <br>
 <br>
 <br>
 <br>
 <br>
-    
+
 <h3>SOLO EVENTS</h3>
 <p><strong>2021</strong><em> I know you won’t forget me</em> (spatialized movie in collaboration with Corentin
-Louis) — 66 rue Rodier à Paris — France</p>
+	Louis) — 66 rue Rodier à Paris — France</p>
 <p><strong>2021</strong><em> I know you won’t forget me</em> (spatialized movie in collaboration with Corentin
-Louis) — 33 rue Saint-Éloi à Lille — France</p>
+	Louis) — 33 rue Saint-Éloi à Lille — France</p>
 <p><strong>2021</strong><em> I know you won’t forget me</em> (spatialized movie in collaboration with Corentin
-Louis) — 49A Boulevard Dalby à Nantes — France</p>
+	Louis) — 49A Boulevard Dalby à Nantes — France</p>
 <p><strong>2021</strong><em> Excalibur - heroically substracting an object from the ground</em> — spatialized
-    projections in the Mercy Cemetery of Nantes — France</p>
+	projections in the Mercy Cemetery of Nantes — France</p>
 <p><strong>2021</strong><em> Expanded cinema display I</em> — computer-generated images with the
-    participation of Thibault Chailleux for the research-creation seminar "Spacing the
-    narrative" — Canada, France</p>
-<p><strong>2020</strong> <em> Cinéduo - the principle of the descent from the cross</em> (in collaboration with Corentin Louis) —
-    Amphitheater of the Nantes Fine Arts School — France</p>
+	participation of Thibault Chailleux for the research-creation seminar "Spacing the
+	narrative" — Canada, France</p>
+<p><strong>2020</strong> <em> Cinéduo - the principle of the descent from the cross</em> (in collaboration with Corentin
+	Louis) —
+	Amphitheater of the Nantes Fine Arts School — France</p>
 <p><strong>2019</strong> <em> The hotel – cinematographic situation</em> — Residhome Hotel Les Berges de la
-    Loire Nantes - France </p>
+	Loire Nantes - France </p>
 <p><strong>2018</strong><em> Cinematter</em> — conference in OLTA's art collective's studio, Tokyo - Japan</p>
 <p><strong>2018</strong><em> The idea of prose in the french cinema</em> — Wanted Clan Cinema, Milan - Italy</p>
 <p><strong>2017</strong><em> Confinement in Room 39</em> — Saint Hélier, Rennes - France</p>
@@ -49,20 +53,29 @@ Louis) — 49A Boulevard Dalby à Nantes — France</p>
 
 <h3>GROUP EVENTS</h3>
 <p><strong>2021</strong> <em>Hotel lobby</em> — video produced with Charles Wassner between Montreal and
-    Paris for the research-creation seminar "Spacing the narrative" — Canada, France</p>
-<p><strong>2019</strong> <em>Felicità</em> — collective exhibition of first-class honors - Palace of the Fine Arts of Paris — France</p>
+	Paris for the research-creation seminar "Spacing the narrative" — Canada, France</p>
+<p><strong>2019</strong> <em>Felicità</em> — collective exhibition of first-class honors - Palace of the Fine Arts of
+	Paris — France</p>
 <p><strong>2019</strong> <em>Go West</em> — collective exhibition — Nantes Fine Arts School gallery — France</p>
 <p><strong>2019</strong> <em>In front of the archipelago </em> — Nantes Fine Arts School Library — France </p>
 <p><strong>2018 </strong><em>Barrak Independants バラックアンデパンダン 生き抜くために創るのだ</em> — Barrak Art Center, Okinawa - Japan</p>
-<p><strong>2018 </strong> <em> From the wetland where the images were born</em> — Nantes Fine Arts School gallery, Nantes - France </p>
-<p><strong>2018</strong> <em>Shisha no Sho 死者の書 The Book of the Dead</em> — with the art collective OLTA, Mount Futakami, Nara - Japan </p>
-<p><strong>2018</strong> <em>In the middle of somewhere</em> — French pavilion of the Suncheon National Garden 순천 만 국가 정원 - South Korea </p>
-<p><strong>2018</strong><em> First Time</em> — French pavilion of the Suncheon National Garden 순천 만 국가 정원 - South Korea </p>
+<p><strong>2018 </strong> <em> From the wetland where the images were born</em> — Nantes Fine Arts School gallery,
+	Nantes - France </p>
+<p><strong>2018</strong> <em>Shisha no Sho 死者の書 The Book of the Dead</em> — with the art collective OLTA, Mount
+	Futakami, Nara - Japan </p>
+<p><strong>2018</strong> <em>In the middle of somewhere</em> — French pavilion of the Suncheon National Garden 순천 만 국가
+	정원 - South Korea </p>
+<p><strong>2018</strong><em> First Time</em> — French pavilion of the Suncheon National Garden 순천 만 국가 정원 - South Korea
+</p>
 <p><strong>2017</strong> <em>Réalités #00</em> — Cloister gallery of the European School of Art of Brittany —France</p>
-<p><strong>2017</strong> <em>BOAT</em> — Cloister Gallery of the European School of Art of Bretagne, Rennes - France </p>
-<p><strong>2016</strong><em> Thabor with views</em> — Gallery of the Orangery and Thabor Park basins, Rennes - France </p>
-<p><strong>2016</strong> <em>Work in process : Dancers sleeping inside a building</em> — Cloister gallery of the European School of Art of Brittany — France</p>
-<p><strong>2013</strong><em> Echoes of the East</em> — TriptiC Léo Lagrange, as part of Nantes Green Capital - France </p>
+<p><strong>2017</strong> <em>BOAT</em> — Cloister Gallery of the European School of Art of Bretagne, Rennes - France
+</p>
+<p><strong>2016</strong><em> Thabor with views</em> — Gallery of the Orangery and Thabor Park basins, Rennes - France
+</p>
+<p><strong>2016</strong> <em>Work in process : Dancers sleeping inside a building</em> — Cloister gallery of the
+	European School of Art of Brittany — France</p>
+<p><strong>2013</strong><em> Echoes of the East</em> — TriptiC Léo Lagrange, as part of Nantes Green Capital - France
+</p>
 <p><strong>2012</strong><em> Tell me, tell yourself</em>— Châteaubriand Library - France</p>
 <br>
 <br>
@@ -71,18 +84,22 @@ Louis) — 49A Boulevard Dalby à Nantes — France</p>
 <br>
 
 <h3>TEXTS AND PUBLICATIONS</h3>
-<p><em> The principle of the descent from the cross</em> — poetry creation in collaboration with Corentin Louis, 2021.</p>
+<p><em> The principle of the descent from the cross</em> — poetry creation in collaboration with Corentin Louis, 2021.
+</p>
 <p><em> Jean-Luc Godard and the exploded display : feelings signs passions</em> — research article UQÀM, 2021.</p>
-<p><em> Exploded diplays and voice-image dispersion : the intermedial polyphony of Jean-Luc Godard</em> — research article UQÀM, 2021.</p>
-<p><em> Excalibur — heroically subtracting an object from the ground</em> — literary creation in collaboration with Corentin Louis, 2019.</p>
-<p><em> Ready to be played</em>  — graduation thesis, 2019.</p>
+<p><em> Exploded diplays and voice-image dispersion : the intermedial polyphony of Jean-Luc Godard</em> — research
+	article UQÀM, 2021.</p>
+<p><em> Excalibur — heroically subtracting an object from the ground</em> — literary creation in collaboration with
+	Corentin Louis, 2019.</p>
+<p><em> Ready to be played</em> — graduation thesis, 2019.</p>
 <p><em> The actress without a cigarette </em> — printings slipped into cigarette paper tubes, 2019.</p>
-<p><em> Survivances</em>  — collection of missing movies, movie posters, 2018.</p>
-<p><em> Réalités 00 </em> — collective photographic edition, under the direction of Patrick Faigenbaum and Yves Trémorin, 2017.</p>
-<p><em> Cinematter</em>  — fictional exhibition file, 2017.</p>
+<p><em> Survivances</em> — collection of missing movies, movie posters, 2018.</p>
+<p><em> Réalités 00 </em> — collective photographic edition, under the direction of Patrick Faigenbaum and Yves
+	Trémorin, 2017.</p>
+<p><em> Cinematter</em> — fictional exhibition file, 2017.</p>
 <p><em> Physical projections </em> — lithographic edition, 2017..</p>
-<p><em> Gloses</em>  — collective edition, under the direction of Laurence Lépron, 2017.</p>
-<p><em> 2088 : Wake up in the middle of another furniture</em>  — a play in one scene, 2016.</p>
+<p><em> Gloses</em> — collective edition, under the direction of Laurence Lépron, 2017.</p>
+<p><em> 2088 : Wake up in the middle of another furniture</em> — a play in one scene, 2016.</p>
 <br>
 <br>
 <br>
@@ -91,7 +108,7 @@ Louis) — 49A Boulevard Dalby à Nantes — France</p>
 
 <h3>INTERNSHIPS</h3>
 <p><strong>2018</strong> OLTA art collective — artistic collaboration and assistantship — Tokyo,
-    Japon.</p>
+	Japon.</p>
 <p><strong>2016</strong> Charles Fréger, photographer artist — assistantship — Rouen, France.</p>
 <p><strong>2015</strong> Natacha Lesueur, photographer artist — assistantship — Rennes, France.</p>
 <br>
@@ -100,7 +117,7 @@ Louis) — 49A Boulevard Dalby à Nantes — France</p>
 <br>
 <br>
 
-<h3>INTERVIEWS (conducted with)</h3> 
+<h3>INTERVIEWS (conducted with)</h3>
 <p><strong>2020</strong> Jacques Perconte</p>
 <p><strong>2020</strong> Noël Herpe</p>
 <p><strong>2019</strong> Antoine de Baecque</p>
@@ -111,4 +128,4 @@ Louis) — 49A Boulevard Dalby à Nantes — France</p>
 <br>
 <br>
 
-<a href="/content/cv/assets/mu_blake_cv.pdf" class="button"> Download CV </a> 
+<a href="/content/cv/assets/BIO-Mil-Feux-FR.pdf" class="button"> Download CV </a>
