--- a/public/content/entretiens/en.html
+++ b/public/content/entretiens/en.html
@@ -3,7 +3,7 @@
 
 
 <p>
-    The interviews are intended to shed light on ideas related to Matthieu Blake's
+    The interviews are intended to shed light on ideas related to Mil Feux's
 research, concerning in the first place the relationship between cinema and the visual
 arts. It is a matter of clearly evoking questions that explore and induce the polyvision
 and the cinematter. These meetings and testimonies come from the world of theory,
