--- a/public/content/entretiens/fr.html
+++ b/public/content/entretiens/fr.html
@@ -3,7 +3,7 @@
 
 <p>
     Les entretiens réalisés ont pour objectif d’éclairer des idées relatives à la recherche de
-Matthieu Blake, concernant en premier lieu les rapports entre le cinéma et les arts
+Mil Feux, concernant en premier lieu les rapports entre le cinéma et les arts
 plastiques. Il s’agit d’évoquer clairement des questions qui explorent et induisent la
 polyvision et la cinématière. Ces rencontres et témoignages proviennent à la fois du
 monde de la théorie, de la pratique artistique, littéraire ou cinématographique et
