--- a/public/content/shisha_no_sho/en.html
+++ b/public/content/shisha_no_sho/en.html
@@ -3,7 +3,7 @@
 
 
 <p>
-    Collaboration project bringing together the OLTA collective and Matthieu Blake around the
+    Collaboration project bringing together the OLTA collective and Mil Feux around the
     cinematographic idea « in the process of being realized » — a film partially produced live
     and whose scenario is unfolded by the performance, speech and drawing, in the style of
     Kurosawa Akira's painted storyboards. The object of the film is gradually revealed, mentally,
