--- a/public/content/shisha_no_sho/fr.html
+++ b/public/content/shisha_no_sho/fr.html
@@ -4,7 +4,7 @@
 
 
 <p>
-    Projet de collaboration réunissant le collectif OLTA et Matthieu Blake autour de l’idée d’un
+    Projet de collaboration réunissant le collectif OLTA et Mil Feux autour de l’idée d’un
     cinéma « en train de se réaliser » — d’un film produit en direct dont le scénario se déploie
     par la performance, la parole et le dessin, à la manière des storyboards peints de Kurosawa
     Akira. L’objet du film se manifeste au fur et à mesure, mentalement, il explore l’histoire de
